# sudoku

./: .gitignore  Makefile  README.md  hard.sudoku  package.yaml  stack.yaml  sudoku.cabal  sudoku.hs
puzzles/: benchmark  easy.sudoku  empty.sudoku  hardest.sudoku
src/: CLI.hs  Main.hs  Sudoku.hs
