name:                sudoku
version:             0.1.0.0
synopsis:            Solve sudoku puzzles
license:             MIT
license-file:        LICENSE
author:              Patrick Herrmann
maintainer:          patrickwherrmann@gmail.com
copyright:           2015 Patrick Herrmann
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/patrickherrmann/sudoku.git

executable sudoku
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base == 4.*,
                       containers,
                       split,
                       optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010